# clipboard-manager

./: .editorconfig  .eslintcache  .gitignore  .prettierignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SEMANTIC_RELEASE.md  TASKS.md  babel.config.js  biome.json  biome.jsonc  commitlint.config.js  cspell.json  eslint.config.ts  index.html  lefthook.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  renovate.json  rsbuild.config.ts  sync-tauri-version.mjs  tsconfig.json
.changeset/: config.json  cool-guests-own.md  dull-places-drive.md  fast-schools-arrive.md  fifty-loops-smile.md  green-hats-strive.md  green-mails-smile.md  icy-hotels-shine.md  light-cobras-lay.md  many-jobs-hammer.md  mean-flies-lick.md  nine-moons-reply.md  olive-wasps-knock.md  pink-donkeys-call.md  quiet-cooks-refuse.md  silly-trees-check.md  spotty-wolves-thank.md  ten-views-vanish.md  three-experts-pull.md  vast-points-beam.md  wicked-lions-teach.md  young-beans-obey.md
.eslint/: base.ts  cspell.ts  import.ts  index.ts  jsx-a11y.ts  language-option.ts  perfectionist.ts  react-hooks.ts  react.ts  shared.ts  testing-library.ts  typescript.ts  vitest.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cargo-version-update.yml  ci-pipeline.yml  ci.yml  create-release-pr.yml  release.yml  version-pr.yml
scripts/: sync-cargo-version.js  sync-version.js  validate-branch-name.js
src/: app.tsx  clipboard-listener.ts  index.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: clipboard.rs  db.rs  lib.rs  ocr.rs
src-tauri/src/api/: file.rs  mod.rs  window.rs
src/components/: clipboard-image.tsx  details-panel.tsx  error-component.tsx  sidebar-list.tsx  top-bar.tsx
src/components/loading/: home.tsx  settings.tsx
src/components/preview/: color-preview.tsx  image-preview.tsx  index.ts  text-preview.tsx
src/components/settings/: index.ts
src/db/: index.ts
src/hooks/: index.ts  use-clipboard-filters.ts  use-clipboard-search.ts  use-clipboard-ui.ts  use-keyboard-navigation.ts  use-scroll-management.ts
src/routes/: __root.tsx  index.tsx  settings.tsx
src/utils/: clipboard.ts  color.ts  dates.ts  events.ts  excluded-apps.ts  image.ts  smart-search.ts  window.ts
(+35 files in other folders)
