[package]
name = "clipboard-manager"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Shintaro Jokagi" ]
edition = "2021"

[lib]
name = "clipboard_manager_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies.tauri-build]
version = "2"
features = [ ]

[dependencies]
tauri-plugin-opener = "2"
serde_json = "1"
tokio = "1.45.0"
once_cell = "1.21.3"
dirs = "5.0"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-fs = "2"
base64 = "0.21"
window-vibrancy = "0.5.2"
active-win-pos-rs = "0.8.3"

  [dependencies.tauri]
  version = "2"
  features = [ "protocol-asset", "tray-icon" ]

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

  [dependencies.tauri-plugin-sql]
  version = "2"
  features = [ "sqlite" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-single-instance = "2"

[target."cfg(target_os = \"windows\")".dependencies]
win_ocr = "0.1.1"

[build]
rustflags = [ "-C", "link-arg=-fuse-ld=lld" ]
