[package]
name = "clipboard-manager"
version = "0.0.10"
description = "A Tauri App"
authors = [ "Shintaro Jokagi" ]
edition = "2021"

[lib]
name = "clipboard_manager_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies.tauri-build]
version = "=2.3.0"
features = [ ]

[dependencies]
tauri-plugin-opener = "=2.4.0"
serde_json = "=1.0.140"
tokio = "=1.45.0"
once_cell = "=1.21.3"
dirs = "=5.0.1"
tauri-plugin-clipboard = "=2.1.11"
tauri-plugin-fs = "=2.4.0"
base64 = "=0.21.7"
window-vibrancy = "=0.5.2"
active-win-pos-rs = "=0.8.3"
tauri-plugin-clipboard-manager = "=2.3.0"

  [dependencies.tauri]
  version = "=2.6.2"
  features = [ "macos-private-api", "protocol-asset", "tray-icon" ]

  [dependencies.serde]
  version = "=1.0.219"
  features = [ "derive" ]

  [dependencies.tauri-plugin-sql]
  version = "=2.3.0"
  features = [ "sqlite" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "=2.5.0"
tauri-plugin-global-shortcut = "=2.0.0"
tauri-plugin-single-instance = "=2.3.0"

[target."cfg(target_os = \"windows\")".dependencies]
win_ocr = "=0.1.1"

[build]
rustflags = [ "-C", "link-arg=-fuse-ld=lld" ]
